<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".onBoard.ThirdFragment"
    android:background="#C5000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/potta_one"
        android:text="@string/notes"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/third"
        android:layout_marginBottom="180dp"/>

    <TextView
        android:id="@+id/tv_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/inter"
        android:text="@string/head_3"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_first"
        app:layout_constraintStart_toStartOf="@+id/iv_first"
        app:layout_constraintTop_toBottomOf="@+id/iv_first"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter"
        android:text="@string/desc_3"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_first"
        app:layout_constraintStart_toStartOf="@+id/iv_first"
        app:layout_constraintTop_toBottomOf="@+id/tv_head" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginTop="106dp"
        android:background="@drawable/bg_btn_start"
        android:fontFamily="@font/roboto"
        android:text="@string/start"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tv_desc"
        app:layout_constraintStart_toStartOf="@+id/tv_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>