<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.taskFragments.TaskFragment"
    android:layout_margin="14dp">

    <ImageView
        android:id="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginTop="6dp" />

    <EditText
        android:id="@+id/et_dateAndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date_and_time"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@drawable/bg_edit"
        android:fontFamily="@font/poppins_thin" />

    <ImageView
        android:id="@+id/btn_selectedColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_selected_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="6dp" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/title"
        android:background="@drawable/bg_edit"
        android:padding="12dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_selectedColor" />

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text"
        android:textSize="16sp"
        android:padding="12dp"
        android:background="@drawable/bg_edit"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/et_title" />

</androidx.constraintlayout.widget.ConstraintLayout>